환경변수 파일 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
         show_Sql: false
         format_sql: true
         highlight_sql: true
+  config:
+    import:
+      - secret.yml
 logging:
   pattern:
     console: "[$d{HH:mm:ss.SSS}][%-5level][%logger.%method:line%line] - %msg%n"
